tests/test_files_pa3/SemanticErrors/LocalVarsNotInitB4Use8.ic
class A
{
	static void main(string[] args) { }
	int a()
	{
		int b;
		if (1 < 0)
		{
		}
		else
			b = 5;
		
		return b;
	}
}